--- a/将两个有序列表合并成一个有序列表.md
+++ b/将两个有序列表合并成一个有序列表.md
@@ -1,1 +1,49 @@
+## 尾递归 ##
 
+尾递归方法一
+
+	a = [1,3,5,8,9]
+	b = [2,4,6]
+	
+	def sort1(a,b):
+	    c = []
+	    if len(a) == 0 :
+	        c.extend(b)
+	        return c
+	    elif len(b) == 0:
+	        c.extend(a)
+	        return c
+	    else:
+	        if a[0] < b[0]:
+	            c.append(a[0])
+	            del a[0]
+	        else:
+	            c.append(b[0])
+	            del b[0]
+	        c += sort1(a, b)
+	    return c
+	sort1(a,b)
+	print(aa)
+
+尾递归方法二
+
+	def hb(L1, L2):
+	    result = []
+	    while L1 and L2:
+	        if L1[0] < L2[0]:
+	            result.append(L1[0])
+	            del L1[0]
+	        else:
+	            result.append(L2[0])
+	            del L2[0]
+	    if L1:
+	        result.extend(L1)
+	    if L2:
+	        result.extend(L2)
+	    print(result)
+	    return result
+	
+	
+	L1 = [3, 4, 7, 9, 11]
+	L2 = [1, 2, 5, 8, 13, 20]
+	hb(L1, L2)
