--- a/将两个有序列表合并成一个有序列表.md
+++ b/将两个有序列表合并成一个有序列表.md
@@ -5,28 +5,37 @@
 
 尾递归方法一
 
-	a = [1,3,5,8,9]
-	b = [2,4,6]
+
+	a = [1, 3, 5, 8, 9]
+	b = [2, 4, 6]
+	count = [0]
 	
-	def sort1(a,b):
+	
+	def sort1(a, b, count):
 	    c = []
-	    if len(a) == 0 :
+	    if len(a) == 0:
+	        count[0] += 1
 	        c.extend(b)
 	        return c
 	    elif len(b) == 0:
+	        count[0] += 1
 	        c.extend(a)
 	        return c
 	    else:
+	        count[0] += 1
 	        if a[0] < b[0]:
 	            c.append(a[0])
 	            del a[0]
 	        else:
 	            c.append(b[0])
 	            del b[0]
-	        c += sort1(a, b)
-	    return c
-	sort1(a,b)
+	        c += sort1(a, b, count)
+	    return (c, count)
+	
+	
+	aa = sort1(a, b, count)
 	print(aa)
+	print(count)
 
 尾递归方法二
 
