--- a/递归函数的原理.md
+++ b/递归函数的原理.md
@@ -61,3 +61,19 @@ f=ff(n-1)*n;//这一步到底是怎么工作的？ return(f); }
 大体过程就是这样的
 
 这里每次一层都相当于一个不同的函数，你可以给他们起名为ff1,ff2,ff3.....这样就不混了。只要注意一点，调用一次，不是在代码本身上执行，而是会复制出一份在执行，虽然不太恰当，但足以说明问题。
+
+
+## 终止递归的方式 ##
+
+- 使用全局变量
+
+- 使用一个或多个参数
+
+- 可能通过异常来控制递归的结束。其实这种情况很常见，每个应用程序的缺省栈空间大小是不会太大的，很容易因为堆栈溢出而让递归函数终止。此外，还可以会发生其它的异常，比如内存空间不足、除零等等。这些异常都可以让递归函数终止。
+
+- 我们一般所说的全局变量都是针对一个应用程序而言的，所以我们还可以利用BIOS或OS的一些数据或一些标准库的全局值来控制递归过程的终止。比如利用日期时间、利用库中的随机数等等。
+
+
+
+
+
