--- a/面试问题以及解析精华整理.md
+++ b/面试问题以及解析精华整理.md
@@ -1,2 +1,11 @@
 
 https://juejin.im/entry/5aa69dc851882555602093b2
+
+
+知乎爬虫
+https://juejin.im/entry/580de72567f3560057c11d2e
+
+异步爬虫
+https://juejin.im/entry/592a6ab7ac502e006c72a42e
+
+
